--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,9 @@ authors = [
 ]
 dependencies = [
     "ruamel.yaml>=0.17.40",
-    "numpy"# Example dependency
+    "numpy",
+    "nptyping"# Example dependency
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/yourproject"
+Homepage = "https://github.com/punyidea/yaml-sci-config"
