--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=40.8.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "yaml-sci-config"
+name = "yaml_sci_config"
 version = "0.1.0"
 description = "Definition of methods that allow easy loading of projects as config files."
 readme = "README.md"
